<resources>
    <string name="app_name">Sanskriti Decor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password*</string>
    <string name="cnfrm_password">Confirm Password*</string>
    <string name="userid">User Name*</string>
    <string name="mobile">Mobile Number*</string>
    <string name="bottom1">Create user <u>click here</u></string>
    <string name="bottom2">Already have an account ? <u>click here</u></string>
    <string name="customer">Party</string>
    <string name="Help_Center">Help</string>
    <string name="order">Order</string>

    <!--For Party-->
    <string name="title_addCustomer">Add Customer</string>
    <string name="title_editCustomer">Modify Customer</string>
    <string name="title_customerList">Customer List</string>
    <string name="Status">Status</string>

    <!--For Order-->
    <string name="item_orderCreate">Order Create</string>
    <string name="pending_order">Pending For Advance</string>
    <string name="pending">Pending to Place Order</string>

    <!--For Status-->
    <string name="hold">Hold</string>
    <string name="pending_to_rece">Pending to Received Material</string>
    <string name="pendin_to_hand">Pending to Hand Over to</string>
    <string name="pending_to_recev">Pending to Received</string>
    <string name="dispatch">Dispatch</string>
    <string name="customername">Customer Name</string>


    <string name="receivedby">Received By</string>
    <string name="elight">Elight</string>
    <string-array name="Unit">
        <item>Unit</item>
        <item>Mtr.</item>
        <item>Roll</item>
        <item>Sqft</item>
    </string-array>
    <string name="pwdtextype">abcdefghijklmnopqrstuvwxyz1234567890 </string>

    <string-array name="MaterialType">
        <item>Material Type</item>
        <item>Curtain</item>
        <item>Sofa</item>
        <item>Wall Paper</item>
        <item>Padding</item>
    </string-array>

    <string name="title_report">Report</string>
    <string name="count">Nothing is selected</string>
    <string name="reset">Speak</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="about_toast">About is clicked</string>
    <string name="read_xlsx">Read XLSX</string>
    <string name="write_xlsx">Write XLSX</string>
    <string name="send_to">Send to...</string>
    <string name="search">Search</string>
    <string name="sanskriti">Sanskriti Decor</string>
    <string name="copyright">\@CopyRight-Sanskriti Decore</string>

    <string name="thoryAbout">Its time you revamp your home Decor!
        Brighten up those walls with colourful wall stickers, add a pretty set
        of floral printed curtains, beautify the living room with Buddha showpieces,
        add a colonial-style wall clock in your dining room, bring in a beautiful hanging ceiling lamp,
        display your favourite memories in our designer photo frames, or add
        a sweet fragrance to your home with some lavender incense sticks.</string>
    <string name="InteriorName">Interior Name (Optional)</string>
    <string name="InteriorNo">Interior Contact (Optional)</string>
    <string name="view"><u>view</u></string>
</resources>
