<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/backdrop">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home_container" />

        <RelativeLayout
            android:id="@+id/centre_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_margin="30dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@mipmap/logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SignUp"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textColor="@color/colortt"
                android:fontFamily="serif"
                android:textSize="25sp"/>


            <EditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/custNames"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="15dp"
                android:drawableTint="@color/colortt"
                android:paddingLeft="15dp"
                android:hint="@string/userid"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/fonts"/>

            <EditText
                android:id="@+id/custNames"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                android:drawableTint="@color/colortt"
                android:drawablePadding="15dp"
                android:paddingLeft="15dp"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/fonts" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/password"
                android:fontFamily="@font/fonts"
                android:inputType="textPassword"
                android:drawablePadding="15dp"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:drawableTint="@color/colortt"
                android:textColor="@color/black"
                android:layout_below="@+id/custNames"/>

            <EditText
                android:id="@+id/cnfpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/cnfrm_password"
                android:fontFamily="@font/fonts"
                android:inputType="textPassword"
                android:drawableTint="@color/colortt"
                android:drawablePadding="15dp"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_below="@+id/password"/>
            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/cnfpassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:background="@drawable/button_shape"
                android:text="SignUp"
                android:fontFamily="@font/fonts"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signInHere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signupButton"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/bottom2"
                android:textColor="@color/colortt"
                android:textSize="15sp"
                android:fontFamily="@font/fonts"/>


        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>
