<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/backdrop">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home_container" />
        <RelativeLayout
            android:id="@+id/centre_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_margin="30dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@mipmap/logo"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/AddcustomerLinear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bottom_background_layout_shape"
                android:layout_above="@+id/modifylinearCustomer"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:tint="@color/colort"
                    android:layout_margin="10dp" />

                <TextView
                    android:id="@+id/addCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/title_addCustomer"
                    android:textColor="@color/colort"
                    android:textSize="18sp"
                    android:fontFamily="@font/fonts"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/modifylinearCustomer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/customerListLinear"
                android:padding="10dp"
                android:background="@drawable/bottom_background_layout_shape">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_person_outline_black_24dp"
                    android:tint="@color/colort"
                    android:layout_margin="10dp" />

                <TextView
                    android:id="@+id/modifyCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/title_editCustomer"
                    android:textColor="@color/colort"
                    android:textSize="18sp"
                    android:fontFamily="@font/fonts"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/customerListLinear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
               android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:background="@drawable/bottom_background_layout_shape">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_customer_black_24dp"
                    android:tint="@color/colort"
                    android:layout_margin="10dp" />

                <TextView
                    android:id="@+id/customerList"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/title_customerList"
                    android:textColor="@color/colort"
                    android:textSize="18sp"
                    android:fontFamily="@font/fonts"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>
